--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,11 +4,35 @@
 
 body {
   @apply bg-black text-slate-50;
+}
+
+body,
+button {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
   font-family: "Eczar", serif;
   text-transform: uppercase;
   letter-spacing: 6px;
   word-break: break-word;
   color: theme("colors.navigation-golden");
+}
+
+/* Apply styles for screens larger than or equal to the 'phone' breakpoint */
+@media (min-width: 375px) and (max-width: 1024px) {
+  body,
+  button {
+    font-size: 1.25rem; /* 20px */
+    line-height: 1.75rem; /* 28px */
+  }
+}
+
+/* Apply styles for screens larger than or equal to the 'laptop' breakpoint */
+@media (min-width: 1024px) {
+  body,
+  button {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
 
 a,
