--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,8 +8,6 @@ body {
 
 body,
 button {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
   font-family: "Eczar", serif;
   text-transform: uppercase;
   letter-spacing: 6px;
@@ -18,20 +16,38 @@ button {
 }
 
 /* Apply styles for screens larger than or equal to the 'phone' breakpoint */
-@media (min-width: 375px) and (max-width: 1024px) {
-  body,
-  button {
+@media (min-width: 375px) and (max-width: 480px) {
+  h1 {
+    font-size: 1.5rem; /* 24px */
+    line-height: 2rem; /* 32px */
+  }
+
+  h2 {
     font-size: 1.25rem; /* 20px */
     line-height: 1.75rem; /* 28px */
+  }
+
+  p {
+    font-size: 1rem; /* 16px */
+    line-height: 1.5rem; /* 24px */
   }
 }
 
 /* Apply styles for screens larger than or equal to the 'laptop' breakpoint */
-@media (min-width: 1024px) {
-  body,
-  button {
+@media (min-width: 480px) {
+  h1 {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  h2 {
+    font-size: 1.875rem; /* 30px */
+    line-height: 2.25rem; /* 36px */
+  }
+
+  p {
+    font-size: 1.125rem; /* 18px */
+    line-height: 1.75rem; /* 28px */
   }
 }
 
