--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,14 @@ button {
   color: theme("colors.navigation-golden");
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: theme("colors.black");
+}
+
 p {
   letter-spacing: 3px;
 }
@@ -22,18 +30,24 @@ p {
 /* Apply styles for screens larger than or equal to the 'phone' breakpoint */
 @media (min-width: 375px) and (max-width: 1024px) {
   h1 {
-    font-size: 1.5rem; /* 24px */
-    line-height: 2rem; /* 32px */
+    font-size: 1.5rem;
+    /* 24px */
+    line-height: 2rem;
+    /* 32px */
   }
 
   h2 {
-    font-size: 1.25rem; /* 20px */
-    line-height: 1.75rem; /* 28px */
+    font-size: 1.25rem;
+    /* 20px */
+    line-height: 1.75rem;
+    /* 28px */
   }
 
   p {
-    font-size: 1rem; /* 16px */
-    line-height: 1.5rem; /* 24px */
+    font-size: 1rem;
+    /* 16px */
+    line-height: 1.5rem;
+    /* 24px */
   }
 }
 
@@ -45,13 +59,17 @@ p {
   }
 
   h2 {
-    font-size: 1.875rem; /* 30px */
-    line-height: 2.25rem; /* 36px */
+    font-size: 1.875rem;
+    /* 30px */
+    line-height: 2.25rem;
+    /* 36px */
   }
 
   p {
-    font-size: 1.125rem; /* 18px */
-    line-height: 1.75rem; /* 28px */
+    font-size: 1.125rem;
+    /* 18px */
+    line-height: 1.75rem;
+    /* 28px */
   }
 }
 
@@ -81,6 +99,7 @@ button {
   &:hover {
     transform: scale(1.1);
   }
+
   &:active {
     transform: scale(1.1);
   }
